package triangularsneaky.tree.vision.pte.attentionHoggers;

public interface WriteableMatrix extends Matrix {
    void set(int x, int y, double[] values);
}
